# Reactive-Navegation

./: README.md  car.slx  requirements.txt
Matlab/: speed.mat  untitled.mat
Matlab/Reactive_navegation/: car.slx
dockerfile/: dockerfile_Gazebo_Ros
hector_gazebo/install/: local_setup.sh  setup.sh
hector_gazebo/log/: latest_build
husky/install/: local_setup.sh  setup.sh
husky/log/: latest_build
log/: latest_build
maps/: create_map.py  map.py  veiw.py
maps/output/: heightmap_traversability.csv  heightmap_traversability.txt  heightmap_z_values.txt  interest_points.csv  interest_points.txt
model/: GaussianProcessModel.py  Gazebo_env.py  ShekelGroundTruth.py  gazeob_test.py  main.py  panda.py  routing.py  test.py  train.py  train_test.py
rendering/: CMakeLists.txt  Main.cc
train_ppo/: actor_model_20250316_181118.keras  actor_model_20250318_011550.keras  actor_model_20250318_012401.keras  actor_model_20250318_013055.keras  actor_model_20250318_014022.keras  actor_model_20250318_014750.keras  actor_model_20250318_021406.keras  actor_model_20250318_024959.keras  critic_model_20250316_181118.keras  critic_model_20250318_011550.keras  critic_model_20250318_012401.keras  critic_model_20250318_013055.keras  critic_model_20250318_014022.keras  critic_model_20250318_014750.keras  critic_model_20250318_021406.keras  critic_model_20250318_024959.keras
workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
workspace/log/: latest_build
workspace_base_link_chasis/src/car_cpp/: package.xml
workspace_full_conected/: actor_model_20250404_222621.keras  actor_model_20250404_230538.keras  actor_model_20250404_230712.keras  actor_model_20250404_231144.keras  actor_model_20250404_234708.keras  actor_model_20250405_010515.keras  actor_model_20250405_013254.keras  actor_model_20250405_185809.keras  actor_model_20250405_185914.keras  actor_model_20250405_191647.keras  actor_model_20250405_192207.keras  actor_model_20250405_192422.keras  actor_model_20250405_192619.keras  actor_model_20250405_193138.keras  actor_model_20250405_193613.keras  critic_model_20250404_222621.keras  critic_model_20250404_230538.keras  critic_model_20250404_230712.keras  critic_model_20250404_231144.keras  critic_model_20250404_234708.keras  critic_model_20250405_010515.keras  critic_model_20250405_013254.keras  critic_model_20250405_185809.keras  critic_model_20250405_185914.keras  critic_model_20250405_191647.keras  critic_model_20250405_192207.keras  critic_model_20250405_192422.keras  critic_model_20250405_192619.keras  critic_model_20250405_193138.keras  critic_model_20250405_193613.keras  frames_2025-02-03_00.50.47.gv  frames_2025-02-03_02.45.36.gv  imagination_model_20250404_222621.keras  imagination_model_20250404_230538.keras  imagination_model_20250404_230712.keras  imagination_model_20250404_231144.keras  imagination_model_20250404_234708.keras  imagination_model_20250405_010515.keras  imagination_model_20250405_013254.keras  imagination_model_20250405_185809.keras  (+7 more)
workspace_full_conected/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
workspace_full_conected/log/: latest_build
workspace_full_conected/src/: dqn_model.pth  replay.py  replay_data.json  supervisor.sh  train.py  train_ppo.py
workspace_full_conected/src/car_cpp/: CMakeLists.txt  package.xml
workspace_full_conected/src/car_cpp/include/: motion.hpp  move_ros.hpp  obstacle_detection.hpp  odometria.hpp  utilities.hpp  visualization.hpp
workspace_full_conected/src/car_cpp/src/: 2D_graph.cpp  ackerman.cpp  camera_filter.cpp  check_goal.cpp  check_map.cpp  control_plugin.cpp  create_wall.cpp  diffdrive_plugin_multi_wheel.cpp  filtered_navigation_nodes.cpp  frontier_nodes.cpp  frontier_values.cpp  ground_remove.cpp  map_measure.cpp  motion.cpp  move.cpp  move_navigation_nodes_frontier.cpp  move_object.cpp  move_ros.cpp  navigation_nodes.cpp  navigation_nodes_ground.cpp  obstacle_detection.cpp  obstacles_in_2d.cpp  odometria.cpp  odometry.cpp  path_planner.cpp  remove_graph_obstacles.cpp  remove_paths.cpp  testo.cpp  utilities.cpp  view_nodes.cpp  visualization.cpp
workspace_full_conected/train/: actor_model_20250316_190306.keras  actor_model_20250318_145026.keras  actor_model_20250318_210021.h5  critic_model_20250316_190306.keras  critic_model_20250318_145026.keras  critic_model_20250318_210021.h5  dqn_model_20250318_210021.h5
workspace_full_conected/weights/: demo.npz  demo_ep20250501_005942.npz  demo_ep20250501_010014.npz  demo_ep20250501_010046.npz  demo_ep20250501_010114.npz  policy_latest.weights.h5  policy_latest_.weights.h5  policy_latest_20250424_141232.weights.h5  policy_latest_20250424_143628.weights.h5  policy_latest_20250427_185221.weights.h5  policy_latest_20250427_190006.weights.h5  policy_latest_20250427_202848.weights.h5  policy_latest_20250427_204954.weights.h5  policy_latest_20250427_204955.weights.h5  policy_latest_20250427_204956.weights.h5  policy_latest_20250427_204957.weights.h5  policy_latest_20250427_204958.weights.h5  policy_latest_20250427_204959.weights.h5  policy_latest_20250427_205135.weights.h5  policy_latest_20250427_205136.weights.h5  policy_latest_20250427_205138.weights.h5  policy_latest_20250427_205139.weights.h5  policy_latest_20250427_205140.weights.h5  policy_latest_20250427_205141.weights.h5  policy_latest_20250427_205256.weights.h5  policy_latest_20250427_213251.weights.h5  policy_latest_20250427_213423.weights.h5  policy_latest_20250427_213653.weights.h5  policy_latest_20250427_213658.weights.h5  policy_latest_20250427_213718.weights.h5  policy_latest_20250427_213719.weights.h5  policy_latest_20250427_213720.weights.h5  policy_latest_20250427_213721.weights.h5  policy_latest_20250429_183554.weights.h5  policy_latest_20250429_183734.weights.h5  policy_latest_20250429_183837.weights.h5  policy_latest_20250429_183937.weights.h5  policy_latest_20250429_184059.weights.h5  policy_latest_20250429_184136.weights.h5  policy_latest_20250429_184240.weights.h5  (+85 more)
workspace_test/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
(+891 files in other folders)
